stderr
Card.java:2: error: class Card is already defined in package unnamed package
    protected enum Card {
              ^
1 error
